[package]
name = "bevy_frustum_culling"
version = "0.1.0"
authors = ["Aevyrie Roessler <aevyrie@gmail.com>"]
edition = "2018"

[dependencies]
bevy = { git = "https://github.com/superdump/bevy", branch = "main-naga", default-features = false, features = ["render"] }
# bevy_mod_bounding = "0.1"
bevy_mod_bounding = { git = "https://github.com/superdump/bevy_mod_bounding", branch = "bevy-main" }

[dev-dependencies]
bevy = { git = "https://github.com/superdump/bevy", branch = "main-naga", default-features = false, features = [
    "bevy_wgpu",
    "bevy_winit",
    "bevy_gltf",
    "x11",
] }

[patch.crates-io]
bevy = { git = "https://github.com/superdump/bevy", branch = "main-naga" }